fix: message 调整

--- a/packages/ui/alert/src/index.less
+++ b/packages/ui/alert/src/index.less
@@ -5,8 +5,9 @@
     align-items: center;
 
     .@{ant-prefix}-alert-close-icon {
-        font-size: 14px;
         height: 14px;
+        margin-left: var(--alert-close-icon-margin-left);
+        font-size: 14px;
     }
 
     .@{ant-prefix}-alert-close-text {
@@ -31,8 +32,8 @@
         }
 
         .@{ant-prefix}-alert-message {
-            font-size: 14px;
             font-weight: bold;
+            font-size: 14px;
         }
 
         .@{ant-prefix}-alert-close-icon {
@@ -87,6 +88,5 @@
 
     &-count-down-close {
         color: var(--theme-placeholder-color);
-        margin-right: 20px;
     }
 }
