--- a/packages/ui/button/src/index.less
+++ b/packages/ui/button/src/index.less
@@ -165,7 +165,7 @@
     }
 
     // 去掉primary的box-shadow
-    &.ant-btn-primary {
+    &.@{ant-prefix}-btn-primary {
         box-shadow: none;
     }
 }
