--- a/packages/ui/radio/src/index.less
+++ b/packages/ui/radio/src/index.less
@@ -1,11 +1,11 @@
 @osui-radio-class-prefix: osui-radio;
 
 .@{osui-radio-class-prefix} {
-    &.ant-radio-wrapper {
+    &.@{ant-prefix}-radio-wrapper {
         margin-right: var(--radio-wrapper-margin-right);
     }
 
-    span.ant-radio + * {
+    span.@{ant-prefix}-radio + * {
         padding-right: var(--radio-span-padding-horizontal);
         padding-left: var(--radio-span-padding-horizontal);
     }
