--- a/packages/ui/collapse/src/index.less
+++ b/packages/ui/collapse/src/index.less
@@ -66,7 +66,7 @@
 // 对层级的控制
 .nest(@level, @content-padding, @icon-padding) {
     .@{osui-collapse-class-prefix}-level-@{level} {
-        .@{ant-prefix}-collapse:not(.ant-collapse-ghost) {
+        .@{ant-prefix}-collapse:not(.@{ant-prefix}-collapse-ghost) {
             border-top: 0;
             border-right: 0;
             border-left: 0;
