--- a/packages/ui/drawer/src/index.less
+++ b/packages/ui/drawer/src/index.less
@@ -14,4 +14,9 @@
         padding: 10px 20px;
         border-top: 1px solid var(--drawer-footer-border-top-color);
     }
+
+    .@{ant-prefix}-drawer-close {
+        color: var(--theme-icon-color);
+        line-height: var(--drawer-close-icon-line-height);
+    }
 }
