--- a/packages/ui/modal/src/index.less
+++ b/packages/ui/modal/src/index.less
@@ -46,7 +46,7 @@
             }
 
             .@{ant-prefix}-modal-close-icon {
-                color: var(--theme-text-color);
+                color: var(--theme-icon-color);
             }
         }
     }
