--- a/packages/ui-theme/icloud-theme/src/antd-vars-patch.less
+++ b/packages/ui-theme/icloud-theme/src/antd-vars-patch.less
@@ -267,7 +267,7 @@
 // ---
 @steps-icon-margin: 0 10px 0 0;
 @steps-small-icon-margin: 0 10px 0 0;
-@steps-icon-font-size: @font-size-base;
+@steps-icon-font-size: @font-size-lg;
 @steps-icon-size: 30px;
 
 // Tree
