--- a/packages/ui/tag/src/index.less
+++ b/packages/ui/tag/src/index.less
@@ -97,7 +97,7 @@
     &.@{ant-prefix}-tag {
         height: 20px;
         padding: 0 10px;
-        line-height: 20px;
+        line-height: 1.5;
         border-radius: 14px;
     }
 }
