--- a/packages/ui-theme/icloud-theme/src/antd-vars-patch.less
+++ b/packages/ui-theme/icloud-theme/src/antd-vars-patch.less
@@ -134,7 +134,7 @@
 @alert-error-icon-color: var(--alert-error-icon-color);
 @alert-message-color: var(--theme-heading-color);
 @alert-text-color: var(--color-brand-10);
-@alert-close-color: var(--theme-text-color-secondary);
+@alert-close-color: var(--theme-icon-color);
 @alert-with-description-padding: var(--alert-with-description-padding);
 @alert-with-description-icon-top: var(--alert-with-description-icon-top);
 
