--- a/packages/ui/slider/src/index.less
+++ b/packages/ui/slider/src/index.less
@@ -67,10 +67,10 @@
             }
         }
 
-        .ant-slider-mark {
+        .@{ant-prefix}-slider-mark {
             margin-top: 10px;
 
-            .ant-slider-mark-text {
+            .@{ant-prefix}-slider-mark-text {
                 color: var(--theme-placeholder-color);
             }
         }
