--- a/packages/ui-theme/icloud-theme/src/antd-vars-patch.less
+++ b/packages/ui-theme/icloud-theme/src/antd-vars-patch.less
@@ -157,6 +157,9 @@
 @btn-disable-color: var(--btn-disable-color);
 @btn-disable-bg: var(--btn-disable-bg);
 @btn-disable-border: var(--btn-disable-border);
+@btn-font-size-lg: 16px;
+@btn-padding-horizontal-base: 15px;
+@btn-padding-horizontal-lg: 20px;
 
 // Tooltip
 // ---
