fix: input-number
Change-Id: Ic3ef121b5e961e06200ac438b13e2a976f8fc6d4

--- a/packages/ui/input-number/src/index.less
+++ b/packages/ui/input-number/src/index.less
@@ -6,4 +6,13 @@
         // 修复箭头不居中的问题
         line-height: 12px;
     }
+
+    .@{ant-prefix}-input-number-handler:hover .@{ant-prefix}-input-number-handler-up-inner,
+    .@{ant-prefix}-input-number-handler:hover .@{ant-prefix}-input-number-handler-down-inner {
+        color: var(--theme-primary-color-hover);
+    }
+
+    .@{ant-prefix}-input-number-handler:active {
+        background: var(--color-brand-1);
+    }
 }
