fix: input pagination table
Change-Id: I74478a38dac9fed9ae8c03bfd6e698ea1e073b17

--- a/packages/ui-theme/icloud-theme/src/antd-vars-patch.less
+++ b/packages/ui-theme/icloud-theme/src/antd-vars-patch.less
@@ -74,6 +74,7 @@
 @input-height-lg: @height-lg;
 @input-hover-border-color: var(--theme-primary-color-hover);
 @input-placeholder-color: var(--theme-placeholder-color);
+@input-disabled-bg: var(--theme-disabled-bg);
 
 // Table
 // ---
