--- a/packages/ui/input-number/src/index.less
+++ b/packages/ui/input-number/src/index.less
@@ -15,4 +15,8 @@
     .@{ant-prefix}-input-number-handler:active {
         background: var(--color-brand-1);
     }
+
+    &.ant-input-number.ant-input-number-disabled {
+        border-color: var(--theme-border-color-disabled);
+    }
 }
