--- a/packages/ui/table/src/index.less
+++ b/packages/ui/table/src/index.less
@@ -79,5 +79,11 @@
             color: var(--theme-icon-color);
             cursor: pointer;
         }
+
+        .ant-pagination-options-quick-jumper input[disabled] {
+            color: var(--theme-disabled-color);
+            background-color: var(--theme-disabled-bg-color);
+            border-color: var(--theme-border-color-disabled);
+        }
     }
 }
