--- a/packages/ui-theme/icloud-theme/src/antd-vars-patch.less
+++ b/packages/ui-theme/icloud-theme/src/antd-vars-patch.less
@@ -184,6 +184,9 @@
 // ---
 @tabs-active-color: var(--link-color);
 @tabs-hover-color: var(--link-color);
+@table-header-color: var(--theme-heading-color);
+@tabs-title-font-size: 14px;
+@tabs-card-horizontal-padding: 11px 10px;
 
 // Box-shadow
 // ---
