fix: antd prefix 调整
Change-Id: I49c7d716572f3100facefa6156a0dc52cbe5d8d6

--- a/packages/ui/checkbox/src/index.less
+++ b/packages/ui/checkbox/src/index.less
@@ -76,7 +76,7 @@
         }
     }
 
-    .ant-checkbox + span {
+    .@{ant-prefix}-checkbox + span {
         padding-right: var(--checkbox-padding-horizontal);
         padding-left: var(--checkbox-padding-horizontal);
     }
