--- a/packages/ui/input-number/src/index.less
+++ b/packages/ui/input-number/src/index.less
@@ -16,7 +16,7 @@
         background: var(--color-brand-1);
     }
 
-    &.ant-input-number.ant-input-number-disabled {
+    &.@{ant-prefix}-input-number.@{ant-prefix}-input-number-disabled {
         border-color: var(--theme-border-color-disabled);
     }
 }
