--- a/packages/ui/pagination/src/index.less
+++ b/packages/ui/pagination/src/index.less
@@ -106,8 +106,8 @@
         }
     }
 
-    &.ant-pagination-disabled .ant-pagination-item.ant-pagination-item-active,
-    .ant-select-disabled.ant-select:not(.ant-select-customize-input) .ant-select-selector,
+    &.@{ant-prefix}-pagination-disabled .@{ant-prefix}-pagination-item.@{ant-prefix}-pagination-item-active,
+    .@{ant-prefix}-select-disabled.@{ant-prefix}-select:not(.@{ant-prefix}-select-customize-input) .@{ant-prefix}-select-selector,
     .@{ant-prefix}-pagination-options-quick-jumper input[disabled] {
         color: var(--theme-disabled-color);
         background: var(--theme-disabled-bg-color);
