--- a/packages/ui/tabs/src/index.less
+++ b/packages/ui/tabs/src/index.less
@@ -9,7 +9,7 @@
         color: var(--tabs-tab-color);
     }
 
-    .@{ant-prefix}-tabs-tab .anticon {
+    .@{ant-prefix}-tabs-tab .@{ant-prefix}icon {
         margin-right: 4px;
     }
 
