--- a/packages/ui/table/src/index.less
+++ b/packages/ui/table/src/index.less
@@ -80,7 +80,7 @@
             cursor: pointer;
         }
 
-        .ant-pagination-options-quick-jumper input[disabled] {
+        .@{ant-prefix}-pagination-options-quick-jumper input[disabled] {
             color: var(--theme-disabled-color);
             background-color: var(--theme-disabled-bg-color);
             border-color: var(--theme-border-color-disabled);
