--- a/packages/ui/pagination/src/index.less
+++ b/packages/ui/pagination/src/index.less
@@ -21,6 +21,12 @@
         svg {
             color: var(--pagination-prev-next-icon-color);
         }
+
+        &.ant-pagination-disabled {
+            svg {
+                color: var(--pagination-prev-next-icon-color-disabled);
+            }
+        }
     }
 
     .@{ant-prefix}-pagination-item-active,
@@ -44,7 +50,7 @@
             cursor: not-allowed;
 
             svg {
-                color: var(--theme-disabled-color);
+                color: var(--pagination-prev-next-icon-color-disabled);
             }
 
             &:hover {
@@ -110,7 +116,7 @@
     .@{ant-prefix}-select-disabled.@{ant-prefix}-select:not(.@{ant-prefix}-select-customize-input) .@{ant-prefix}-select-selector,
     .@{ant-prefix}-pagination-options-quick-jumper input[disabled] {
         color: var(--theme-disabled-color);
-        background: var(--pagination-disabled-bg);
+        background: var(--theme-disabled-bg);
         border-color: var(--theme-border-color-disabled);
     }
 }
